-- AQC-Core — estimation item relationships (data model)
-- Generated by SchemaExport.BuildSql(); item→material composition + item→item derivation.

CREATE TABLE item (
  key      TEXT PRIMARY KEY,
  name     TEXT,
  unit     TEXT,
  category TEXT
);
CREATE TABLE material (
  key      TEXT PRIMARY KEY,
  name     TEXT,
  unit     TEXT,
  category TEXT
);
CREATE TABLE recipe (
  key        TEXT PRIMARY KEY,
  item_key   TEXT REFERENCES item(key),
  name       TEXT,
  dry_factor REAL,
  note       TEXT
);
CREATE TABLE recipe_component (
  id           TEXT PRIMARY KEY,
  recipe_key   TEXT REFERENCES recipe(key),
  material_key TEXT REFERENCES material(key),
  parts        REAL
);
CREATE TABLE item_material (
  id           TEXT PRIMARY KEY,
  item_key     TEXT REFERENCES item(key),
  material_key TEXT REFERENCES material(key),
  note         TEXT
);
CREATE TABLE link_rule (
  id            TEXT PRIMARY KEY,
  name          TEXT,
  source_item   TEXT REFERENCES item(key),
  target_item   TEXT REFERENCES item(key),
  basis         TEXT,
  factor        REAL,
  rate_code     TEXT,
  rate_override REAL
);
CREATE TABLE derived_item (
  id          TEXT PRIMARY KEY,
  rule_id     TEXT REFERENCES link_rule(id),
  source_item TEXT REFERENCES item(key),
  target_item TEXT REFERENCES item(key),
  source_qty  REAL,
  factor      REAL,
  target_qty  REAL,
  target_unit TEXT
);

-- Items
INSERT INTO item(key,name,unit,category) VALUES ('Concrete','RCC concrete (columns, beams, slabs, footings, walls, stairs)','m³','Structure');
INSERT INTO item(key,name,unit,category) VALUES ('Masonry','Masonry','m³','Trade');
INSERT INTO item(key,name,unit,category) VALUES ('Plaster','Plastering','m²','Trade');
INSERT INTO item(key,name,unit,category) VALUES ('Painting','Painting','m²','Trade');
INSERT INTO item(key,name,unit,category) VALUES ('Flooring','Flooring','m²','Trade');
INSERT INTO item(key,name,unit,category) VALUES ('Skirting','Skirting','m','Trade');
INSERT INTO item(key,name,unit,category) VALUES ('Screed','Screed','m²','Trade');
INSERT INTO item(key,name,unit,category) VALUES ('VDF','VDF','m²','Trade');
INSERT INTO item(key,name,unit,category) VALUES ('Waterproofing','Waterproofing','m²','Trade');
INSERT INTO item(key,name,unit,category) VALUES ('DPC','DPC','m','Trade');
INSERT INTO item(key,name,unit,category) VALUES ('Coping','Coping','m','Trade');
INSERT INTO item(key,name,unit,category) VALUES ('Parapet','Parapet','m','Trade');
INSERT INTO item(key,name,unit,category) VALUES ('PCC','PCC bed','m³','Trade');
INSERT INTO item(key,name,unit,category) VALUES ('SSM','Size stone','m³','Trade');
INSERT INTO item(key,name,unit,category) VALUES ('Earthwork','Earthwork','m³','Trade');
INSERT INTO item(key,name,unit,category) VALUES ('Shuttering','Shuttering','m²','Trade');
INSERT INTO item(key,name,unit,category) VALUES ('Plinth protection','Plinth protection','m²','Trade');
INSERT INTO item(key,name,unit,category) VALUES ('Doors','Doors','nos','Trade');
INSERT INTO item(key,name,unit,category) VALUES ('Windows','Windows','nos','Trade');

-- Materials
INSERT INTO material(key,name,unit,category) VALUES ('CEMENT','Cement (OPC / PPC)','bags (50kg)','Binder');
INSERT INTO material(key,name,unit,category) VALUES ('FINE_AGG','Fine aggregate (sand)','m³','Aggregate');
INSERT INTO material(key,name,unit,category) VALUES ('COARSE_AGG','Coarse aggregate','m³','Aggregate');
INSERT INTO material(key,name,unit,category) VALUES ('WATER','Water','litre','Binder');
INSERT INTO material(key,name,unit,category) VALUES ('BRICK','Bricks (modular)','nos','Unit');
INSERT INTO material(key,name,unit,category) VALUES ('ACC_BLOCK','AAC / ACC blocks','nos','Unit');
INSERT INTO material(key,name,unit,category) VALUES ('CEM_BLOCK','Cement / concrete blocks','nos','Unit');
INSERT INTO material(key,name,unit,category) VALUES ('STEEL','Reinforcement steel','kg','Steel');
INSERT INTO material(key,name,unit,category) VALUES ('SIZE_STONE','Size stone','m³','Stone');

-- Recipes + components (item → material)
INSERT INTO recipe(key,item_key,name,dry_factor,note) VALUES ('CONC_M15','Concrete','M15 concrete',1.54,'IS 456 nominal');
INSERT INTO recipe_component(id,recipe_key,material_key,parts) VALUES ('rc1','CONC_M15','CEMENT',1);
INSERT INTO recipe_component(id,recipe_key,material_key,parts) VALUES ('rc2','CONC_M15','FINE_AGG',2);
INSERT INTO recipe_component(id,recipe_key,material_key,parts) VALUES ('rc3','CONC_M15','COARSE_AGG',4);
INSERT INTO recipe(key,item_key,name,dry_factor,note) VALUES ('CONC_M20','Concrete','M20 concrete',1.54,'IS 456 nominal');
INSERT INTO recipe_component(id,recipe_key,material_key,parts) VALUES ('rc4','CONC_M20','CEMENT',1);
INSERT INTO recipe_component(id,recipe_key,material_key,parts) VALUES ('rc5','CONC_M20','FINE_AGG',1.5);
INSERT INTO recipe_component(id,recipe_key,material_key,parts) VALUES ('rc6','CONC_M20','COARSE_AGG',3);
INSERT INTO recipe(key,item_key,name,dry_factor,note) VALUES ('CONC_M25','Concrete','M25 concrete',1.54,'Nominal-style estimate');
INSERT INTO recipe_component(id,recipe_key,material_key,parts) VALUES ('rc7','CONC_M25','CEMENT',1);
INSERT INTO recipe_component(id,recipe_key,material_key,parts) VALUES ('rc8','CONC_M25','FINE_AGG',1);
INSERT INTO recipe_component(id,recipe_key,material_key,parts) VALUES ('rc9','CONC_M25','COARSE_AGG',2);
INSERT INTO recipe(key,item_key,name,dry_factor,note) VALUES ('CONC_M30','Concrete','M30 concrete',1.54,'Estimate — use design mix on site');
INSERT INTO recipe_component(id,recipe_key,material_key,parts) VALUES ('rc10','CONC_M30','CEMENT',1);
INSERT INTO recipe_component(id,recipe_key,material_key,parts) VALUES ('rc11','CONC_M30','FINE_AGG',1);
INSERT INTO recipe_component(id,recipe_key,material_key,parts) VALUES ('rc12','CONC_M30','COARSE_AGG',2);
INSERT INTO recipe(key,item_key,name,dry_factor,note) VALUES ('CONC_M35','Concrete','M35 concrete',1.54,'Estimate — design mix required');
INSERT INTO recipe_component(id,recipe_key,material_key,parts) VALUES ('rc13','CONC_M35','CEMENT',1);
INSERT INTO recipe_component(id,recipe_key,material_key,parts) VALUES ('rc14','CONC_M35','FINE_AGG',0.75);
INSERT INTO recipe_component(id,recipe_key,material_key,parts) VALUES ('rc15','CONC_M35','COARSE_AGG',1.5);
INSERT INTO recipe(key,item_key,name,dry_factor,note) VALUES ('CONC_M40','Concrete','M40 concrete',1.54,'Estimate — design mix required');
INSERT INTO recipe_component(id,recipe_key,material_key,parts) VALUES ('rc16','CONC_M40','CEMENT',1);
INSERT INTO recipe_component(id,recipe_key,material_key,parts) VALUES ('rc17','CONC_M40','FINE_AGG',0.75);
INSERT INTO recipe_component(id,recipe_key,material_key,parts) VALUES ('rc18','CONC_M40','COARSE_AGG',1.5);
INSERT INTO recipe(key,item_key,name,dry_factor,note) VALUES ('CM_1_3','Plaster','Cement mortar 1:3',1.33,'Rich mortar — plaster / DPC');
INSERT INTO recipe_component(id,recipe_key,material_key,parts) VALUES ('rc19','CM_1_3','CEMENT',1);
INSERT INTO recipe_component(id,recipe_key,material_key,parts) VALUES ('rc20','CM_1_3','FINE_AGG',3);
INSERT INTO recipe(key,item_key,name,dry_factor,note) VALUES ('CM_1_4','Masonry','Cement mortar 1:4',1.33,'Block / brick masonry');
INSERT INTO recipe_component(id,recipe_key,material_key,parts) VALUES ('rc21','CM_1_4','CEMENT',1);
INSERT INTO recipe_component(id,recipe_key,material_key,parts) VALUES ('rc22','CM_1_4','FINE_AGG',4);
INSERT INTO recipe(key,item_key,name,dry_factor,note) VALUES ('CM_1_6','Masonry','Cement mortar 1:6',1.33,'Brick masonry / plaster (default)');
INSERT INTO recipe_component(id,recipe_key,material_key,parts) VALUES ('rc23','CM_1_6','CEMENT',1);
INSERT INTO recipe_component(id,recipe_key,material_key,parts) VALUES ('rc24','CM_1_6','FINE_AGG',6);
INSERT INTO recipe(key,item_key,name,dry_factor,note) VALUES ('PCC_1_4_8','PCC','PCC 1:4:8',1.33,'Plain cement concrete bed');
INSERT INTO recipe_component(id,recipe_key,material_key,parts) VALUES ('rc25','PCC_1_4_8','CEMENT',1);
INSERT INTO recipe_component(id,recipe_key,material_key,parts) VALUES ('rc26','PCC_1_4_8','FINE_AGG',4);
INSERT INTO recipe_component(id,recipe_key,material_key,parts) VALUES ('rc27','PCC_1_4_8','COARSE_AGG',8);

-- Direct item → material
INSERT INTO item_material(id,item_key,material_key,note) VALUES ('im1','Masonry','BRICK','Brick masonry — unit count incl. wastage');
INSERT INTO item_material(id,item_key,material_key,note) VALUES ('im2','Masonry','ACC_BLOCK','AAC/ACC block masonry — alternative unit');
INSERT INTO item_material(id,item_key,material_key,note) VALUES ('im3','Masonry','CEM_BLOCK','Concrete block masonry — alternative unit');
INSERT INTO item_material(id,item_key,material_key,note) VALUES ('im4','SSM','SIZE_STONE','Size-stone masonry — stone volume');
INSERT INTO item_material(id,item_key,material_key,note) VALUES ('im5','Concrete','STEEL','RCC reinforcement (from the BBS engine)');

-- Derivation (item → item) — standard library
INSERT INTO link_rule(id,name,source_item,target_item,basis,factor,rate_code,rate_override) VALUES ('msn-plaster','Plaster from masonry (both faces)','Masonry','Plaster','Area',2,'',0);
INSERT INTO link_rule(id,name,source_item,target_item,basis,factor,rate_code,rate_override) VALUES ('plaster-paint','Painting from plaster','Plaster','Painting','Area',1,'',0);
INSERT INTO link_rule(id,name,source_item,target_item,basis,factor,rate_code,rate_override) VALUES ('floor-skirting','Skirting from flooring perimeter','Flooring','Skirting','Perimeter',1,'',0);
INSERT INTO link_rule(id,name,source_item,target_item,basis,factor,rate_code,rate_override) VALUES ('floor-screed','Screed bedding under flooring','Flooring','Screed','Area',1,'',0);
INSERT INTO link_rule(id,name,source_item,target_item,basis,factor,rate_code,rate_override) VALUES ('msn-dpc','DPC along masonry base','Masonry','DPC','Length',1,'',0);
