// ─────────────────────────────────────────────────────────────────────────────
// AQC-Core — estimation item relationships (data model)
//
// Generated by SchemaExport.BuildDbml() from the live registries — do not hand-edit;
// regenerate from the app (Item links → Export data model).
//
// Two relationship families:
//   • item → material  (composition / BOM): concrete → cement + fine + coarse agg;
//                        masonry → bricks + mortar; RCC → steel.
//   • item → item      (derivation): brick wall → plaster → paint; floor → skirting.
//
// Open: dbdiagram.io → New Diagram → Import → paste (DBML).
// ─────────────────────────────────────────────────────────────────────────────

Project aqc_core_derivation {
  database_type: 'Generic'
  Note: 'AQC-Core (Human Centric Works) — how estimation items relate: composed of materials (recipe/BOM) and derived from other items (linked-item model).'
}

// ── Items — nodes shared by both relationship families ────────────────────────
Table item {
  key      varchar [pk, note: 'Item key = trade key / element, e.g. "Masonry", "Concrete"']
  name     varchar
  unit     varchar [note: 'm² | m³ | m | nos | kg']
  category varchar [note: 'Finish | Structure | Masonry | …']
  Note: '''
  Estimation items — both the consumers in the composition model and the nodes of the
  derivation graph. Seeded from LinkTradeRegistry plus RCC concrete:
    • Concrete — RCC concrete (columns, beams, slabs, footings, walls, stairs) (m³)
    • Masonry — Masonry (m³)
    • Plaster — Plastering (m²)
    • Painting — Painting (m²)
    • Flooring — Flooring (m²)
    • Skirting — Skirting (m)
    • Screed — Screed (m²)
    • VDF — VDF (m²)
    • Waterproofing — Waterproofing (m²)
    • DPC — DPC (m)
    • Coping — Coping (m)
    • Parapet — Parapet (m)
    • PCC — PCC bed (m³)
    • SSM — Size stone (m³)
    • Earthwork — Earthwork (m³)
    • Shuttering — Shuttering (m²)
    • Plinth protection — Plinth protection (m²)
    • Doors — Doors (nos)
    • Windows — Windows (nos)
  '''
}

// ── Materials — leaves of the composition model ───────────────────────────────
Table material {
  key      varchar [pk, note: 'e.g. CEMENT, FINE_AGG, COARSE_AGG, BRICK, STEEL']
  name     varchar
  unit     varchar
  category varchar [note: 'Binder | Aggregate | Unit | Steel | Stone']
  Note: '''
  Purchasable materials a work item resolves to:
    • CEMENT — Cement (OPC / PPC) (bags (50kg))
    • FINE_AGG — Fine aggregate (sand) (m³)
    • COARSE_AGG — Coarse aggregate (m³)
    • WATER — Water (litre)
    • BRICK — Bricks (modular) (nos)
    • ACC_BLOCK — AAC / ACC blocks (nos)
    • CEM_BLOCK — Cement / concrete blocks (nos)
    • STEEL — Reinforcement steel (kg)
    • SIZE_STONE — Size stone (m³)
  '''
}

// ── Composition (item → material) ─────────────────────────────────────────────
Table recipe {
  key       varchar [pk, note: 'e.g. CONC_M25, CM_1_6, PCC_1_4_8']
  item_key  varchar [ref: > item.key, note: 'The item this recipe composes']
  name      varchar
  dry_factor double [note: 'Wet→dry volume factor (concrete 1.54)']
  note      varchar
  Note: 'A ratio recipe: the item decomposes into materials by parts (see recipe_component). target material qty = dry_factor × item volume × parts / Σparts.'
}

Table recipe_component {
  id           varchar [pk]
  recipe_key   varchar [ref: > recipe.key]
  material_key varchar [ref: > material.key]
  parts        double  [note: 'Proportion by volume, e.g. cement 1 : sand 1 : aggregate 2']
  Note: 'One material line of a recipe. e.g. CONC_M25 → CEMENT 1, FINE_AGG 1, COARSE_AGG 2.'
}

Table item_material {
  id           varchar [pk]
  item_key     varchar [ref: > item.key]
  material_key varchar [ref: > material.key]
  note         varchar
  Note: 'Direct item→material edge for materials that are not part of a ratio recipe — masonry → bricks, RCC → reinforcement steel.'
}

// ── Derivation (item → item) — the linked-item model ──────────────────────────
Table link_rule {
  id           varchar [pk]
  name         varchar
  source_item  varchar [ref: > item.key, note: 'Producer item']
  target_item  varchar [ref: > item.key, note: 'Consumer item']
  basis        varchar [note: 'Area | Volume | Length | Perimeter | Count']
  factor       double  [note: 'target_qty = factor × source[basis]']
  rate_code    varchar [note: 'Optional pinned rate code']
  rate_override double [note: 'Optional manual unit rate']
  Note: '''
  A derivation edge — target quantity follows the source. Standard library:
    • Masonry → Plastering  (Area × 2)
    • Plastering → Painting  (Area × 1)
    • Flooring → Skirting  (Perimeter × 1)
    • Flooring → Screed  (Area × 1) [off]
    • Masonry → DPC  (Length × 1) [off]
  '''
}

Table derived_item {
  id          varchar [pk]
  rule_id     varchar [ref: > link_rule.id]
  source_item varchar [ref: > item.key]
  target_item varchar [ref: > item.key]
  source_qty  double
  factor      double
  target_qty  double  [note: 'factor × source_qty']
  target_unit varchar
  Note: 'Engine output (DerivationEngine.Preview) — a computed linked line; logically a view over item × link_rule.'
}

TableGroup composition {
  item
  recipe
  recipe_component
  item_material
  material
}

TableGroup derivation {
  link_rule
  derived_item
}
